auto-generate swagger-file
